Night shift, working on change_name.sh

--- a/config/server.conf
+++ b/config/server.conf
@@ -4,10 +4,11 @@
 
 [global]
 MASTER_IP=203.0.113.7
-SSH_PORT_BOOTSTRAP=42
+SSH_PORT_BOOTSTRAP=22
 SSH_PORT_FINAL=22
 
 [user]
+DEFAULT_USER="ubuntu"
 NEW_USERNAME="name"
 ROOT_PASSWORD="password"
 
