--- a/config/server.conf
+++ b/config/server.conf
@@ -26,7 +26,7 @@ PasswordAuthentication = yes
 [ssh.secure]
 Port = {{SSH_PORT_FINAL}}
 PermitRootLogin = no
-PasswordAuthentication = no
+PasswordAuthentication = yes
 
 [ufw.profile.Nginx]
 title=Web Server
