Fixed stuped double named mistake

--- a/config/server.conf
+++ b/config/server.conf
@@ -2,6 +2,8 @@
 # Server Automation Main Config
 # =====================================================
 
+
+#---------------- Configurable Settings ----------------#
 [global]
 MASTER_IP=203.0.113.7
 SSH_PORT_BOOTSTRAP=22
@@ -13,10 +15,9 @@ NEW_USERNAME="name"
 ROOT_PASSWORD="password"
 
 [ufw]
-DEFAULT_INCOMING=deny
+DEFAULT_INCOMING=drop
 DEFAULT_OUTGOING=allow
 ALLOW_SERVICES=ssh,https
-PACKAGES="ufw fail2ban knockd"
 
 [ssh.bootstrap]
 Port = {{SSH_PORT_BOOTSTRAP}}
@@ -27,6 +28,8 @@ PasswordAuthentication = yes
 Port = {{SSH_PORT_FINAL}}
 PermitRootLogin = no
 PasswordAuthentication = yes
+
+#------------------ UFW Profiles -----------------------#
 
 [ufw.profile.Nginx]
 title=Web Server
@@ -43,6 +46,8 @@ title=WireGuard VPN
 description=WireGuard VPN ports
 ports=51820/udp,1194/udp
 
+
+# ---------------- Knockd Profiles ----------------------#
 [knockd.profile.SSH]
 sequence=7000,8000,9000
 seq_timeout=10
