--- a/config/server.conf
+++ b/config/server.conf
@@ -15,7 +15,7 @@ NEW_USERNAME="name"
 ROOT_PASSWORD="password"
 
 [ufw]
-DEFAULT_INCOMING=drop
+DEFAULT_INCOMING=deny
 DEFAULT_OUTGOING=allow
 ALLOW_SERVICES=ssh,https
 
@@ -34,7 +34,7 @@ PasswordAuthentication = yes
 [ufw.profile.Nginx]
 title=Web Server
 description=NGINX web server ports
-ports=80/tcp,443/tcp,8080/tcp,8443/tcp
+ports=80/tcp|443/tcp|8080/tcp|8443/tcp
 
 [ufw.profile.SSH-Custom]
 title=SSH Custom Port
@@ -44,10 +44,11 @@ ports={{SSH_PORT_BOOTSTRAP}}/tcp
 [ufw.profile.VPN]
 title=WireGuard VPN
 description=WireGuard VPN ports
-ports=51820/udp,1194/udp
+ports=51820/udp|1194/udp
 
 
 # ---------------- Knockd Profiles ----------------------#
+
 [knockd.profile.SSH]
 sequence=7000,8000,9000
 seq_timeout=10
